--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 stage: sft
 do_train: True
-model_name_or_path: ./models/deepseek-ai/DeepSeek-R1-Distill-Qwen-32B
+model_name_or_path: models/deepseek-ai/DeepSeek-R1-Distill-Qwen-32B
 preprocessing_num_workers: 16
 finetuning_type: lora
 quantization_bit: 4
